# STKFMM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ChebNodal.cpp  ChebNodal.h  Makefile  PointDistribution.h  README.md  README_Tex.md  STKFMM.cpp  STKFMM.h  SimpleKernel.cpp  SimpleKernel.h  do-cmake.sh  main.cpp
Config/: BenchP0.toml  BenchWallP0.toml  LargeP0.toml  LargeWallP0.toml  PlotTestResult.py  PointDistribution.py  Verify.toml  VerifyWall.toml
Demo/: CMakeLists.txt  Demo.cpp  Demo_SK.cpp
Doc/: StokesSigularity.tex  StokesSingularity.tex
Interface/: STKFMM-py.cpp
Kernel/: StokesDoubleLayerKernel.hpp  StokesLayerKernel.hpp  StokesSingleLayerKernel.hpp
Lib/: CMakeLists.txt
Lib/include/STKFMM/: Doxyfile  LaplaceLayerKernel.hpp  RPYCustomKernel.hpp  RPYKernel.hpp  STKFMM.h  STKFMM.hpp  STKFMM_common.hpp  STKFMM_impl.hpp  StokesDoubleLayerKernel.hpp  StokesLayerKernel.hpp  StokesRegSingleLayerKernel.hpp  StokesSingleLayerKernel.hpp  stkfmm_helpers.hpp
Lib/src/: FMMData.cpp  STKFMM.cpp  Stk3DFMM-c.cpp  Stk3DFMM.cpp  StkWallFMM.cpp
M2L/: CMakeLists.txt  SVD_pvfmm.hpp  gen.py  svd_test.cpp
M2L/Laplace/: CMakeLists.txt  Laplace1D3D.cpp  Laplace2D3D.cpp  Laplace3D3D.cpp  main.cpp
M2L/StokesPVel/: StokesPVel1D3D.cpp  StokesPVel2D3D.cpp  StokesPVel3D3D.cpp  main.cpp
M2L/Stokeslet/: CMakeLists.txt  Stokes1D3D.cpp  Stokes2D3D.cpp  Stokes3D3D.cpp  main.cpp
Note/: LaplaceQuadrupole.nb
Python/: CMakeLists.txt  Makefile  PySTKFMM.py  STKFMM-py.cpp  STKFMM.py  check_flux.py  example.py  kernels.py  rpy_test.py  timer.py
Scripts/: KernelToCodeLaplaceDL.nb  KernelToCodeLaplaceSL.nb  KernelToCodeStokesDL.nb  KernelToCodeStokesDLTrace.nb  KernelToCodeStokesSL.nb
Test/: CMakeLists.txt  Makefile  SimpleKernel.cpp  SimpleKernel.hpp  Test.cpp  Test.hpp  main.cpp  main3D.cpp  mainWall.cpp  treeB1000  treeB2000  treeB4000
Test/Util/: ChebNodal.cpp  ChebNodal.h  ChebNodal.hpp  PointDistribution.cpp  PointDistribution.h  PointDistribution.hpp  Timer.hpp  cmdparser.hpp
Util/: Timer.hpp
cmake/: FindPVFMM.cmake
doc/: Doxyfile.in
